--- a/src/view/pages/editPage.fxml
+++ b/src/view/pages/editPage.fxml
@@ -6,23 +6,28 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.pages.EditPageController">
    <children>
-      <MenuBar prefHeight="20.0" prefWidth="600.0">
+      <MenuBar layoutY="23.0" prefHeight="20.0" prefWidth="600.0">
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
               <MenuItem fx:id="save" mnemonicParsing="false" onAction="#onSaveClicked" text="Save" />
             </items>
           </Menu>
-          <Menu mnemonicParsing="false" text="Control">
+          <Menu mnemonicParsing="false" text="Run">
             <items>
-              <MenuItem fx:id="back" mnemonicParsing="false" text="Back" />
+              <MenuItem fx:id="run" mnemonicParsing="false" text="Run" />
             </items>
           </Menu>
+            <Menu mnemonicParsing="false" text="Control">
+              <items>
+                <MenuItem fx:id="back" mnemonicParsing="false" text="Back" />
+              </items>
+            </Menu>
         </menus>
       </MenuBar>
-      <TextField fx:id="content" layoutY="29.0" prefHeight="384.0" prefWidth="600.0" />
+      <TextField fx:id="content" layoutY="52.0" prefHeight="361.0" prefWidth="600.0" />
+      <Label fx:id="filename" prefHeight="23.0" prefWidth="600.0" text="Label" />
    </children>
 </AnchorPane>
