--- a/src/view/pages/execute.fxml
+++ b/src/view/pages/execute.fxml
@@ -7,7 +7,6 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.pages.ExecuteController">
    <children>
       <ScrollPane layoutX="78.0" layoutY="33.0" prefHeight="194.0" prefWidth="445.0">
@@ -17,5 +16,6 @@
       </ScrollPane>
       <TextArea fx:id="inputArea" layoutX="78.0" layoutY="272.0" prefHeight="100.0" prefWidth="206.0" promptText="Input area" />
       <TextArea fx:id="outputArea" layoutX="317.0" layoutY="272.0" prefHeight="100.0" prefWidth="206.0" promptText="Output area" />
+      <Button fx:id="OKButton" layoutX="163.0" layoutY="236.0" mnemonicParsing="false" onAction="#refreshInput" text="OK" />
    </children>
 </AnchorPane>
