--- a/src/view/pages/editPage.fxml
+++ b/src/view/pages/editPage.fxml
@@ -27,7 +27,9 @@
             </Menu>
         </menus>
       </MenuBar>
-      <TextField fx:id="content" layoutY="52.0" prefHeight="361.0" prefWidth="600.0" />
       <Label fx:id="filename" prefHeight="23.0" prefWidth="600.0" text="Label" />
+      <TextArea fx:id="input" layoutX="-1.0" layoutY="284.0" prefHeight="118.0" prefWidth="316.0" promptText="Input" />
+      <TextArea fx:id="content" layoutX="-1.0" layoutY="51.0" prefHeight="232.0" prefWidth="600.0" />
+      <Button fx:id="runButton" layoutX="375.0" layoutY="315.0" mnemonicParsing="false" onAction="#onRunClicked" prefHeight="55.0" prefWidth="127.0" text="Run" />
    </children>
 </AnchorPane>
