--- a/src/view/pages/execute.fxml
+++ b/src/view/pages/execute.fxml
@@ -9,15 +9,21 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.pages.ExecuteController">
    <children>
-      <ScrollPane layoutX="78.0" layoutY="33.0" prefHeight="194.0" prefWidth="445.0">
+      <ScrollPane layoutX="50.0" layoutY="14.0" prefHeight="142.0" prefWidth="473.0">
          <content>
-            <FlowPane fx:id="contentPane" prefHeight="200.0" prefWidth="427.0" />
+            <FlowPane fx:id="contentPane" prefHeight="547.0" prefWidth="458.0" />
          </content>
       </ScrollPane>
-      <TextArea fx:id="inputArea" layoutX="78.0" layoutY="272.0" prefHeight="100.0" prefWidth="206.0" promptText="Input area" />
-      <TextArea fx:id="outputArea" layoutX="317.0" layoutY="272.0" prefHeight="100.0" prefWidth="206.0" promptText="Output area" />
-      <Button fx:id="runButton" layoutX="83.0" layoutY="237.0" mnemonicParsing="false" onAction="#refreshInput" prefHeight="27.0" prefWidth="47.0" text="Run" />
-      <Button fx:id="stopButton" layoutX="163.0" layoutY="237.0" mnemonicParsing="false" onAction="#terminate" text="Stop" />
-      <Button fx:id="freshButton" layoutX="394.0" layoutY="237.0" mnemonicParsing="false" text="Fresh" onMouseClicked="#refreshOutput" />
+      <TextArea fx:id="inputArea" layoutX="50.0" layoutY="286.0" prefHeight="100.0" prefWidth="222.0" promptText="Input area" />
+      <TextArea fx:id="outputArea" layoutX="302.0" layoutY="286.0" prefHeight="100.0" prefWidth="222.0" promptText="Output area" />
+      <Button fx:id="runButton" layoutX="50.0" layoutY="251.0" mnemonicParsing="false" onAction="#refreshInput" prefHeight="27.0" prefWidth="59.0" text="Run" />
+      <Button fx:id="stopButton" layoutX="213.0" layoutY="251.0" mnemonicParsing="false" onAction="#terminate" prefHeight="27.0" prefWidth="59.0" text="Stop" />
+      <Button fx:id="freshButton" layoutX="387.0" layoutY="251.0" mnemonicParsing="false" onMouseClicked="#refreshOutput" text="Fresh" />
+      <Button fx:id="debugButton" layoutX="132.0" layoutY="251.0" mnemonicParsing="false" onAction="#onDebugClicked" text="Debug" />
+      <ScrollPane layoutX="50.0" layoutY="178.0" prefHeight="68.0" prefWidth="473.0">
+         <content>
+            <FlowPane fx:id="stackPane" prefHeight="51.0" prefWidth="894.0" />
+         </content>
+      </ScrollPane>
    </children>
 </AnchorPane>
