--- a/src/view/pages/execute.fxml
+++ b/src/view/pages/execute.fxml
@@ -11,19 +11,21 @@
    <children>
       <ScrollPane layoutX="50.0" layoutY="14.0" prefHeight="142.0" prefWidth="473.0">
          <content>
-            <FlowPane fx:id="contentPane" prefHeight="547.0" prefWidth="458.0" />
+            <FlowPane fx:id="contentPane" prefHeight="187.0" prefWidth="458.0" />
          </content>
       </ScrollPane>
-      <TextArea fx:id="inputArea" layoutX="50.0" layoutY="286.0" prefHeight="100.0" prefWidth="222.0" promptText="Input area" />
+      <TextArea fx:id="inputArea" layoutX="51.0" layoutY="286.0" prefHeight="100.0" prefWidth="222.0" promptText="Input area" />
       <TextArea fx:id="outputArea" layoutX="302.0" layoutY="286.0" prefHeight="100.0" prefWidth="222.0" promptText="Output area" />
       <Button fx:id="runButton" layoutX="50.0" layoutY="251.0" mnemonicParsing="false" onAction="#refreshInput" prefHeight="27.0" prefWidth="59.0" text="Run" />
       <Button fx:id="stopButton" layoutX="213.0" layoutY="251.0" mnemonicParsing="false" onAction="#terminate" prefHeight="27.0" prefWidth="59.0" text="Stop" />
       <Button fx:id="freshButton" layoutX="387.0" layoutY="251.0" mnemonicParsing="false" onMouseClicked="#refreshOutput" text="Fresh" />
-      <Button fx:id="debugButton" layoutX="132.0" layoutY="251.0" mnemonicParsing="false" onAction="#onDebugClicked" text="Debug" />
-      <ScrollPane layoutX="50.0" layoutY="178.0" prefHeight="68.0" prefWidth="473.0">
+      <Button fx:id="debugButton" layoutX="132.0" layoutY="220.0" mnemonicParsing="false" onAction="#onDebugClicked" prefHeight="27.0" prefWidth="59.0" text="Debug" />
+      <ScrollPane layoutX="50.0" layoutY="169.0" prefHeight="42.0" prefWidth="473.0">
          <content>
             <FlowPane fx:id="stackPane" prefHeight="51.0" prefWidth="894.0" />
          </content>
       </ScrollPane>
+      <Button fx:id="nextButton" layoutX="213.0" layoutY="220.0" mnemonicParsing="false" onAction="#onDebugClicked" prefHeight="27.0" prefWidth="59.0" text="Next" />
+      <Button fx:id="backButton" layoutX="50.0" layoutY="220.0" mnemonicParsing="false" onAction="#onDebugClicked" prefHeight="27.0" prefWidth="59.0" text="Back" />
    </children>
 </AnchorPane>
