--- a/src/view/pages/execute.fxml
+++ b/src/view/pages/execute.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import javafx.scene.shape.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
@@ -19,13 +20,18 @@
       <Button fx:id="runButton" layoutX="50.0" layoutY="251.0" mnemonicParsing="false" onAction="#exec" prefHeight="27.0" prefWidth="59.0" text="Run" />
       <Button fx:id="stopButton" layoutX="213.0" layoutY="251.0" mnemonicParsing="false" onAction="#terminate" prefHeight="27.0" prefWidth="59.0" text="Stop" />
       <Button fx:id="freshButton" layoutX="387.0" layoutY="251.0" mnemonicParsing="false" onMouseClicked="#refreshOutput" text="Fresh" />
-      <Button fx:id="debugButton" layoutX="132.0" layoutY="220.0" mnemonicParsing="false" onAction="#onDebugClicked" prefHeight="27.0" prefWidth="59.0" text="Debug" />
+      <Button fx:id="debugButton" layoutX="133.0" layoutY="251.0" mnemonicParsing="false" onAction="#onDebugClicked" prefHeight="27.0" prefWidth="59.0" text="Debug" />
       <ScrollPane layoutX="50.0" layoutY="169.0" prefHeight="42.0" prefWidth="473.0">
          <content>
             <FlowPane fx:id="stackPane" prefHeight="51.0" prefWidth="894.0" />
          </content>
       </ScrollPane>
-      <Button fx:id="nextButton" layoutX="213.0" layoutY="220.0" mnemonicParsing="false" onAction="#onDebugClicked" prefHeight="27.0" prefWidth="59.0" text="Next" />
-      <Button fx:id="backButton" layoutX="50.0" layoutY="220.0" mnemonicParsing="false" onAction="#onDebugClicked" prefHeight="27.0" prefWidth="59.0" text="Back" />
+      <Button fx:id="nextButton" layoutX="213.0" layoutY="220.0" mnemonicParsing="false" onAction="#debugNext" prefHeight="27.0" prefWidth="59.0" text="Next" />
+      <Button fx:id="backButton" layoutX="50.0" layoutY="220.0" mnemonicParsing="false" onAction="#debugBack" prefHeight="27.0" prefWidth="59.0" text="Back" />
+      <Button fx:id="debugButton1" layoutX="133.0" layoutY="220.0" mnemonicParsing="false" onAction="#onContinueClicked" prefHeight="27.0" prefWidth="59.0" text="Continue" textAlignment="CENTER">
+         <font>
+            <Font size="10.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
