--- a/src/view/pages/execute.fxml
+++ b/src/view/pages/execute.fxml
@@ -12,7 +12,7 @@
    <children>
       <ScrollPane layoutX="50.0" layoutY="14.0" prefHeight="142.0" prefWidth="473.0">
          <content>
-            <FlowPane fx:id="contentPane" prefHeight="187.0" prefWidth="458.0" />
+            <FlowPane fx:id="contentPane" prefHeight="0.0" prefWidth="473.0" />
          </content>
       </ScrollPane>
       <TextArea fx:id="inputArea" layoutX="51.0" layoutY="286.0" prefHeight="100.0" prefWidth="222.0" promptText="Input area" />
@@ -23,7 +23,7 @@
       <Button fx:id="debugButton" layoutX="133.0" layoutY="251.0" mnemonicParsing="false" onAction="#onDebugClicked" prefHeight="27.0" prefWidth="59.0" text="Debug" />
       <ScrollPane layoutX="50.0" layoutY="169.0" prefHeight="42.0" prefWidth="473.0">
          <content>
-            <FlowPane fx:id="stackPane" prefHeight="51.0" prefWidth="894.0" />
+            <HBox fx:id="stackPane" />
          </content>
       </ScrollPane>
       <Button fx:id="nextButton" layoutX="213.0" layoutY="220.0" mnemonicParsing="false" onAction="#debugNext" prefHeight="27.0" prefWidth="59.0" text="Next" />
