--- a/src/view/pages/signIn.fxml
+++ b/src/view/pages/signIn.fxml
@@ -6,16 +6,16 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.pages.SignInController">
    <children>
       <Pane prefHeight="400.0" prefWidth="600.0">
          <children>
-            <TextField fx:id="userName" layoutX="217.0" layoutY="74.0" onKeyTyped="#modified" />
-            <PasswordField fx:id="password" layoutX="217.0" layoutY="130.0" onKeyTyped="#modified" />
+            <TextField fx:id="userName" layoutX="217.0" layoutY="74.0" onAction="#modified" onKeyTyped="#modified" />
+            <PasswordField fx:id="password" layoutX="217.0" layoutY="130.0" onAction="#modified" onKeyTyped="#modified" />
             <Label alignment="CENTER" layoutX="144.0" layoutY="74.0" prefHeight="27.0" prefWidth="51.0" text="ID:" />
             <Label alignment="CENTER" layoutX="136.0" layoutY="135.0" text="Password:" />
-            <Button fx:id="button" layoutX="217.0" layoutY="210.0" mnemonicParsing="false" prefHeight="65.0" prefWidth="167.0" text="Start Coding" onMouseClicked="#signIn" />
+            <Button fx:id="startButton" layoutX="217.0" layoutY="200.0" mnemonicParsing="false" onMouseClicked="#signIn" prefHeight="27.0" prefWidth="179.0" text="Start Coding" />
+            <Button fx:id="passwordButton" layoutX="217.0" layoutY="250.0" mnemonicParsing="false" onMouseClicked="#aboutPassword" prefHeight="27.0" prefWidth="179.0" text="Forget/Change Password" />
          </children>
       </Pane>
    </children>
