--- a/src/view/pages/editPage.fxml
+++ b/src/view/pages/editPage.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.input.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
@@ -22,12 +23,15 @@
           </Menu>
             <Menu mnemonicParsing="false" text="Control">
               <items>
-                <MenuItem fx:id="back" mnemonicParsing="false" text="Back" />
+                <MenuItem fx:id="back" mnemonicParsing="false" onAction="#goHome" text="Home">
+                     <accelerator>
+                        <KeyCodeCombination alt="UP" code="H" control="UP" meta="UP" shift="ANY" shortcut="UP" />
+                     </accelerator></MenuItem>
               </items>
             </Menu>
         </menus>
       </MenuBar>
-      <Label fx:id="filename" prefHeight="23.0" prefWidth="600.0" text="Label" />
+      <Label fx:id="filename" prefHeight="23.0" prefWidth="600.0" text="Label" textAlignment="CENTER" />
       <TextArea fx:id="input" layoutX="-1.0" layoutY="284.0" prefHeight="118.0" prefWidth="316.0" promptText="Input" />
       <TextArea fx:id="content" layoutX="-1.0" layoutY="51.0" prefHeight="232.0" prefWidth="600.0" />
       <Button fx:id="runButton" layoutX="375.0" layoutY="315.0" mnemonicParsing="false" onAction="#onRunClicked" prefHeight="55.0" prefWidth="127.0" text="Run" />
