--- a/src/view/pages/editPage.fxml
+++ b/src/view/pages/editPage.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import javafx.scene.input.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
@@ -31,9 +32,12 @@
             </Menu>
         </menus>
       </MenuBar>
-      <Label fx:id="filename" prefHeight="23.0" prefWidth="600.0" text="Label" textAlignment="CENTER" />
-      <TextArea fx:id="input" layoutX="-1.0" layoutY="284.0" prefHeight="118.0" prefWidth="316.0" promptText="Input" />
-      <TextArea fx:id="content" layoutX="-1.0" layoutY="51.0" prefHeight="232.0" prefWidth="600.0" />
-      <Button fx:id="runButton" layoutX="375.0" layoutY="315.0" mnemonicParsing="false" onAction="#onRunClicked" prefHeight="55.0" prefWidth="127.0" text="Run" />
+      <Label fx:id="filename" alignment="CENTER" prefHeight="23.0" prefWidth="600.0" text="Label" textAlignment="CENTER" />
+      <TextArea fx:id="input" layoutX="-1.0" layoutY="303.0" prefHeight="99.0" prefWidth="487.0" promptText="Input" />
+      <TextArea fx:id="content" layoutX="-1.0" layoutY="51.0" prefHeight="249.0" prefWidth="600.0" />
+      <Button fx:id="runButton" layoutX="449.0" layoutY="316.0" mnemonicParsing="false" onAction="#onRunClicked" prefHeight="99.0" prefWidth="112.0" stylesheets="@../resource/Configure.css" text="Run" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0">
+         <font>
+            <Font size="33.0" />
+         </font></Button>
    </children>
 </AnchorPane>
