--- a/src/view/pages/execute.fxml
+++ b/src/view/pages/execute.fxml
@@ -8,30 +8,50 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.pages.ExecuteController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@../resource/Configure.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.pages.ExecuteController">
    <children>
-      <ScrollPane layoutX="50.0" layoutY="14.0" prefHeight="142.0" prefWidth="473.0">
+      <ScrollPane layoutY="68.0" prefHeight="142.0" prefWidth="613.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <content>
             <FlowPane fx:id="contentPane" prefHeight="0.0" prefWidth="473.0" />
          </content>
       </ScrollPane>
-      <TextArea fx:id="inputArea" layoutX="51.0" layoutY="286.0" prefHeight="100.0" prefWidth="222.0" promptText="Input area" />
-      <TextArea fx:id="outputArea" layoutX="302.0" layoutY="286.0" prefHeight="100.0" prefWidth="222.0" promptText="Output area" />
-      <Button fx:id="runButton" layoutX="50.0" layoutY="251.0" mnemonicParsing="false" onAction="#exec" prefHeight="27.0" prefWidth="59.0" text="Run" />
-      <Button fx:id="stopButton" layoutX="213.0" layoutY="251.0" mnemonicParsing="false" onAction="#terminate" prefHeight="27.0" prefWidth="59.0" text="Stop" />
-      <Button fx:id="freshButton" layoutX="387.0" layoutY="251.0" mnemonicParsing="false" onMouseClicked="#refreshOutput" text="Fresh" />
-      <Button fx:id="debugButton" layoutX="133.0" layoutY="251.0" mnemonicParsing="false" onAction="#onDebugClicked" prefHeight="27.0" prefWidth="59.0" text="Debug" />
-      <ScrollPane layoutX="50.0" layoutY="169.0" prefHeight="42.0" prefWidth="473.0">
+      <TextArea fx:id="inputArea" layoutY="257.0" prefHeight="142.0" prefWidth="294.0" promptText="Input area" />
+      <TextArea fx:id="outputArea" layoutX="299.0" layoutY="257.0" prefHeight="142.0" prefWidth="244.0" promptText="Output area" />
+      <ScrollPane layoutY="213.0" prefHeight="39.0" prefWidth="613.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <content>
             <HBox fx:id="stackPane" />
          </content>
       </ScrollPane>
-      <Button fx:id="nextButton" layoutX="213.0" layoutY="220.0" mnemonicParsing="false" onAction="#debugNext" prefHeight="27.0" prefWidth="59.0" text="Next" />
-      <Button fx:id="backButton" layoutX="50.0" layoutY="220.0" mnemonicParsing="false" onAction="#debugBack" prefHeight="27.0" prefWidth="59.0" text="Back" />
-      <Button fx:id="debugButton1" layoutX="133.0" layoutY="220.0" mnemonicParsing="false" onAction="#onContinueClicked" prefHeight="27.0" prefWidth="59.0" text="Continue" textAlignment="CENTER">
-         <font>
-            <Font size="10.0" />
-         </font>
-      </Button>
+      <MenuBar prefHeight="29.0" prefWidth="613.0">
+        <menus>
+          <Menu mnemonicParsing="false" text="File">
+            <items>
+              <MenuItem mnemonicParsing="false" text="Close" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Edit">
+            <items>
+              <MenuItem mnemonicParsing="false" text="Delete" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Help">
+            <items>
+              <MenuItem mnemonicParsing="false" text="About" />
+            </items>
+          </Menu>
+        </menus>
+      </MenuBar>
+      <ToolBar layoutX="4.0" layoutY="29.0" prefHeight="0.0" prefWidth="200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+        <items>
+            <Button fx:id="runButton" mnemonicParsing="false" onAction="#exec" prefHeight="27.0" prefWidth="59.0" text="Run" />
+            <Button fx:id="debugButton" mnemonicParsing="false" onAction="#onDebugClicked" prefHeight="27.0" prefWidth="59.0" text="Debug" />
+            <Button fx:id="stopButton" mnemonicParsing="false" onAction="#terminate" prefHeight="27.0" prefWidth="59.0" text="Stop" />
+            <Button fx:id="nextButton" mnemonicParsing="false" onAction="#debugNext" prefHeight="27.0" prefWidth="59.0" text="Next" />
+            <Button fx:id="debugButton1" mnemonicParsing="false" onAction="#onContinueClicked" prefHeight="27.0" prefWidth="77.0" text="Continue" textAlignment="CENTER" />
+            <Button fx:id="backButton" mnemonicParsing="false" onAction="#debugBack" prefHeight="27.0" prefWidth="59.0" text="Back" />
+        </items>
+      </ToolBar>
+      <Button fx:id="freshButton" layoutX="550.0" layoutY="257.0" mnemonicParsing="false" onMouseClicked="#refreshOutput" prefHeight="65.0" prefWidth="59.0" text="Fresh" />
+      <Button fx:id="freshButton1" layoutX="550.0" layoutY="328.0" mnemonicParsing="false" onMouseClicked="#refreshOutput" prefHeight="65.0" prefWidth="59.0" text="Home" />
    </children>
 </AnchorPane>
