--- a/src/view/pages/execute.fxml
+++ b/src/view/pages/execute.fxml
@@ -12,31 +12,28 @@
    <children>
       <ScrollPane layoutY="68.0" prefHeight="142.0" prefWidth="613.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <content>
-            <FlowPane fx:id="contentPane" prefHeight="0.0" prefWidth="473.0" />
+            <FlowPane fx:id="contentPane" prefHeight="0.0" prefWidth="610.0" />
          </content>
       </ScrollPane>
       <TextArea fx:id="inputArea" layoutY="257.0" prefHeight="142.0" prefWidth="294.0" promptText="Input area" />
       <TextArea fx:id="outputArea" layoutX="299.0" layoutY="257.0" prefHeight="142.0" prefWidth="244.0" promptText="Output area" />
       <ScrollPane layoutY="213.0" prefHeight="39.0" prefWidth="613.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <content>
-            <HBox fx:id="stackPane" />
+            <HBox fx:id="stackPane" prefHeight="38.0" prefWidth="0.0" />
          </content>
       </ScrollPane>
       <MenuBar prefHeight="29.0" prefWidth="613.0">
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
-              <MenuItem mnemonicParsing="false" text="Close" />
+              <MenuItem mnemonicParsing="false" onAction="#goHome" text="Close" />
+                  <MenuItem mnemonicParsing="false" onAction="#openFile" text="Open..." />
             </items>
           </Menu>
-          <Menu mnemonicParsing="false" text="Edit">
+          <Menu mnemonicParsing="false" text="Control">
             <items>
-              <MenuItem mnemonicParsing="false" text="Delete" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Help">
-            <items>
-              <MenuItem mnemonicParsing="false" text="About" />
+              <MenuItem mnemonicParsing="false" onAction="#goBackToEdit" text="Back to edit" />
+                  <MenuItem mnemonicParsing="false" onAction="#goHome" text="Back to home" />
             </items>
           </Menu>
         </menus>
@@ -52,6 +49,6 @@
         </items>
       </ToolBar>
       <Button fx:id="freshButton" layoutX="550.0" layoutY="257.0" mnemonicParsing="false" onMouseClicked="#refreshOutput" prefHeight="65.0" prefWidth="59.0" text="Fresh" />
-      <Button fx:id="freshButton1" layoutX="550.0" layoutY="328.0" mnemonicParsing="false" onMouseClicked="#refreshOutput" prefHeight="65.0" prefWidth="59.0" text="Home" />
+      <Button fx:id="freshButton1" layoutX="550.0" layoutY="328.0" mnemonicParsing="false" onAction="#goHome" onMouseClicked="#refreshOutput" prefHeight="65.0" prefWidth="59.0" text="Home" />
    </children>
 </AnchorPane>
