--- a/src/view/pages/welcomePage.fxml
+++ b/src/view/pages/welcomePage.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane fx:id="basePane" prefHeight="618.0" prefWidth="615.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.pages.WelcomePageController" onMouseClicked="#login">
+<AnchorPane fx:id="basePane" onMouseClicked="#login" prefHeight="618.0" prefWidth="615.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.pages.WelcomePageController">
    <children>
       <ImageView fitHeight="618.0" fitWidth="615.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -21,9 +21,9 @@
       </ImageView>
       <Pane fx:id="welcomePane" blendMode="DIFFERENCE" prefHeight="618.0" prefWidth="615.0">
          <children>
-            <Label layoutX="145.0" layoutY="36.0" prefHeight="83.0" prefWidth="325.0" text="The BF IDE" textFill="#fff2f2">
+            <Label layoutX="49.0" layoutY="40.0" prefHeight="83.0" prefWidth="518.0" text="THE BF/OOK IDE" textFill="#fff2f2">
                <font>
-                  <Font name="Andale Mono" size="51.0" />
+                  <Font name="Optima Bold" size="64.0" />
                </font>
             </Label>
          </children>
