--- a/src/view/pages/editPage.fxml
+++ b/src/view/pages/editPage.fxml
@@ -26,9 +26,10 @@
           </Menu>
         </menus>
       </MenuBar>
+      <Label fx:id="wrongLabel" layoutX="479.0" layoutY="3.0" prefHeight="17.0" prefWidth="119.0" textFill="RED" />
       <Label fx:id="filename" alignment="CENTER" onMouseClicked="#onLabelClicked" prefHeight="23.0" prefWidth="600.0" text="Label" textAlignment="CENTER" />
       <TextArea fx:id="input" layoutX="-1.0" layoutY="303.0" prefHeight="99.0" prefWidth="487.0" promptText="Input" />
-      <TextArea fx:id="content" layoutX="-1.0" layoutY="51.0" prefHeight="249.0" prefWidth="600.0" />
+      <TextArea fx:id="content" layoutX="-1.0" layoutY="51.0" onKeyReleased="#syntaxCheck" prefHeight="249.0" prefWidth="600.0" />
       <Button fx:id="runButton" layoutX="449.0" layoutY="316.0" mnemonicParsing="false" onAction="#onRunClicked" prefHeight="99.0" prefWidth="112.0" stylesheets="@../resource/Configure.css" text="Run" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <font>
             <Font size="33.0" />
